[gd_scene load_steps=5 format=2]

[ext_resource path="res://player/player_sprites/player_spritesheet.png" type="Texture" id=1]
[ext_resource path="res://enemies/server_enemy.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=13]
radius = 7.0
height = 14.0

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 15, 14 )

[node name="server_enemy" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ -29.0 ]
}

[node name="col" type="CollisionShape2D" parent="."]
position = Vector2( -1, -14 )
shape = SubResource( 13 )

[node name="sprite" type="Sprite" parent="."]
position = Vector2( 0, -16 )
texture = ExtResource( 1 )
hframes = 8
vframes = 9

[node name="detect_ground" type="RayCast2D" parent="sprite"]
position = Vector2( 10, 0 )
enabled = true
cast_to = Vector2( 0, 21 )

[node name="detect_wall_lower" type="RayCast2D" parent="sprite"]
position = Vector2( 6, 7 )
enabled = true
cast_to = Vector2( 6, 0 )

[node name="detect_wall_upper" type="RayCast2D" parent="sprite"]
position = Vector2( 6, -3 )
enabled = true
cast_to = Vector2( 6, 0 )

[node name="player_detection" type="Area2D" parent="sprite"]
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="col" type="CollisionShape2D" parent="sprite/player_detection"]
position = Vector2( 15, 2 )
shape = SubResource( 14 )

[node name="attack_timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="sprite/player_detection" to="." method="_on_player_detection_body_entered"]
[connection signal="timeout" from="attack_timer" to="." method="_on_attack_timer_timeout"]
